--- a/SignalRNetCorePrototype/ClientApp/package.json
+++ b/SignalRNetCorePrototype/ClientApp/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@aspnet/signalr": "1.1.0",
     "@angular/animations": "7.2.3",
     "@angular/common": "7.2.3",
     "@angular/compiler": "7.2.3",
@@ -23,6 +22,10 @@
     "@angular/platform-browser-dynamic": "7.2.3",
     "@angular/platform-server": "7.2.3",
     "@angular/router": "7.2.3",
+    "@aspnet/signalr": "1.1.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
